Closed
Bug 46014
Opened 26 years ago
Closed 26 years ago
No keywords loaded on bugzilla pages
Categories
(Core :: Layout: Form Controls, defect, P3)
Tracking
()
VERIFIED
FIXED
M16
People
(Reporter: akkzilla, Assigned: neeti)
References
Details
(Keywords: relnote, Whiteboard: [nsbeta2+][dogfood-][ETA 7/28])
In today's commercial build, when I load bugzilla pages, very often, the
keywords field comes up blank when I know there are keywords in the bug.
If I then load the same page in yesterday's mozilla build, or in 4.7, I do see
keywords.
Hitting reload or shift-reload doesn't help. But sometimes, going to another
page then loading the bugzilla page again causes the keywords to show up.
| Reporter | ||
Comment 1•26 years ago
|
||
Nom. for dogfood -- I know I've stopped using today's build (and have gone back
to the 7/19 build) after accidentally deleting keywords from quite a few bug
reports.
Comment 2•26 years ago
|
||
it makes no sense that this would happen in the commercial build and
not in the debug build. There has been a lot of check ins by editor
folks - reassigning
I sat down with Akkana to look at this, and we agreed that this sounds alot like
bug #44226 which has been causing me grief for a while.
Reassign to neeti@netscape.com, and Cc radha@netscape.com, and let them decide
whether to dup this bug or put a dependency on 44226.
Assignee: rods → neeti
| Reporter | ||
Comment 4•26 years ago
|
||
Note: Kin points out that this happens when you load a bugzilla page, modify it
and submit, then later (after visiting more pages) go back and try to load the
same page. It loads the original page, not the new version.
Fiddling with my cache settings seems to have made this go away for the moment.
So it looks like there's some combination of cache settings that make this
happen.
Akkana,
Did you change your cache settings from "Once per session" to "everytime"?
If you have your setting set to "Once per session", it would validate the page
only once, and get it from the cache rest of the time.
Neeti
Comment 6•26 years ago
|
||
Duplicate of 41228?
| Reporter | ||
Comment 7•26 years ago
|
||
I think I had it set to "once per session" when I was seeing this bug. But when
I saw the problem, shift-reload didn't help. Shouldn't shift-reload always
reload the real page, not the cached page?
Yes, shift+reload should reload the real page, and not the cached page.
Radha, Bill,
Is the shift+reload button hooked up to the cache?
Neeti
Comment 9•26 years ago
|
||
shift-relaod is not hooked yet. I think Ben goodger has a bug on that. bu tI can
take a look at it real soon.
Comment 10•26 years ago
|
||
Putting on [nsbeta2+][dogfood-] radar. Does not need a fix ASAP for daily work,
but we should fix this for beta2. Adding "relnote" keyword for PR2 release. The
nsbeta2+ is only for setting the default for chache settings to "everytime" and
adding "relnote" keyword to inform users of this problem and default setting.
Keywords: relnote
Whiteboard: [nsbeta2+][dogfood-]
Comment 11•26 years ago
|
||
bug 46004 says shift key isn't working for key press commands.
| Assignee | ||
Comment 12•26 years ago
|
||
I have changed the Cache preference default settings to "everytime" from "Once
per session". Waiting for a review to check it in.
Neeti
Status: NEW → ASSIGNED
Comment 13•26 years ago
|
||
uhh, can i ask a stupid question?
Why are we changing the default rather than _fixing the bug_? Changing the
default is just plain wrong. Are we saying that we don't know how to fix it?
| Assignee | ||
Comment 14•26 years ago
|
||
Sorry, I did not add a comment last night, that we are not going to fix this bug
, by changing the cache preference. Instead, I am investigating why bugzilla
pages are being cached in the first place. They should not be getting cached
in the disk cache, but rather we should be putting them in the memory cache to
improve performance, so when we hit the back button, we get it from the memory
cache.
Neeti
| Assignee | ||
Comment 15•26 years ago
|
||
*** Bug 46585 has been marked as a duplicate of this bug. ***
Comment 16•26 years ago
|
||
FOr the dupe 46585..testcase where it occurs all the time for me is:
Steps to repro:
1)Launch seamonkey, go to Bugscape or Bugzilla and query on any bug.
2)Make a change to the bug.(I added myself to the cc: list)
3) Commit the change
4)When the page with "Changes to Bug XXXX submitted" appears, click on the link
"Back to BUG# XXXX" to view your changes.
Actual results: The changes are not reflected when you go back to the bug. If
you reload the page via Reload icon, you then see your changes.
Nominating nsbeta2 as customers may experience this at other sites which do
something similar.
Whiteboard: [nsbeta2+][dogfood-] → [nsbeta2+][dogfood-][ETA Investigating]
Whiteboard: [nsbeta2+][dogfood-][ETA Investigating] → [nsbeta2+][dogfood-][ETA 7/27]
Comment 17•26 years ago
|
||
Updating to ETA 7/28
Whiteboard: [nsbeta2+][dogfood-][ETA 7/27] → [nsbeta2+][dogfood-][ETA 7/28]
| Assignee | ||
Comment 19•26 years ago
|
||
test this fix
| Assignee | ||
Comment 20•26 years ago
|
||
test
| Assignee | ||
Comment 21•26 years ago
|
||
test
| Assignee | ||
Comment 22•26 years ago
|
||
Checked in a fix on branch and tip
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
Comment 23•26 years ago
|
||
test on 2000-08-01-04 Linux Commercial
Comment 24•26 years ago
|
||
test on 2000-08-01-04 Win95 Commercial
Comment 25•26 years ago
|
||
test on 2000-08-01-04 MacOS9 Commercial
Comment 26•26 years ago
|
||
Marking VERIFIED FIXED on:
- MacOS9 2000-08-01-04-M17 Commercial
- Linux 2000-08-01-04-M17 Commercial
- Win95 2000-08-01-04-M17 Commercial
Status: RESOLVED → VERIFIED
Comment 27•24 years ago
|
||
Mass removing self from CC list.
Comment 28•24 years ago
|
||
Now I feel sumb because I have to add back. Sorry for the spam.
You need to log in
before you can comment on or make changes to this bug.
Description
•