fix for bug 46014 - No keywords loaded on bugzilla pages, r/a=gagan